update contact email

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <section>
             <h2 class="dark-text">Contact Us</h2>
-            <p>For inquiries, please email us: contact@preonhealth.ai</p>
+            <p>For inquiries, please email us: info@preonhealth.ai</p>
         </section>
     </main>
     <footer>
