--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div class="description">
-            <p>At Preaon Health, we're dedicated to leveraging artificial intelligence to
+            <p>At Preon Health, we're dedicated to leveraging artificial intelligence to
                 transform cancer treatment.
                 Stay
                 tuned
@@ -40,7 +40,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 PreonHealth.ai. All rights reserved.</p>
+        <p>&copy; 2024 preonhealth.ai. All rights reserved.</p>
     </footer>
 
     <script src="index.js"></script>
